test/black-box/v5/3.toc
# Funcao principal do programa
void toc()
  int banana = 4
  str frutas[3] = {“cereja”, “jaca”, “limão”, “pitanga”}
